--- a/electronica.html
+++ b/electronica.html
@@ -536,6 +536,81 @@
                 <p>Precio : $</p>
             </div>
         </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-md-8">
+                <div id="TecladoGameFactorKbg601" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="imagenes/Electronica/TecladoGameFactorKbg601-1.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Electronica/TecladoGameFactorKbg601-2.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Electronica/TecladoGameFactorKbg601-3.jpg" class="d-block w-100" alt="">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#TecladoGameFactorKbg601" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#TecladoGameFactorKbg601" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h3>Teclado GameFactor Kbg601</h3>
+                <p>Descripción</p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>Precio : $</p>
+            </div>
+        </div>      
+        <br/>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-md-8">
+                <div id="TecladoMouseGiroscopio" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="imagenes/Electronica/TecladoMouseGiroscopio-1.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Electronica/TecladoMouseGiroscopio-2.jpg" class="d-block w-100" alt="">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#TecladoMouseGiroscopio" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#TecladoMouseGiroscopio" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h3>Teclado Mouse Giroscopio</h3>
+                <p>Descripción</p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>Precio : $</p>
+            </div>
+        </div>
         
     </div>
 
