--- a/juguetes.html
+++ b/juguetes.html
@@ -53,32 +53,168 @@
     </nav>
     <div class="section container">
         <div class="row">
-            <div class="col-md-8">
-                <div id="carouselJuguetes" class="carousel slide" data-ride="carousel">
+            <div class="col-md-5">
+                <div id="GyomeiBandai" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 1">
+                            <img src="imagenes/Juguetes/GyomeiBandai-1.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 2">
+                            <img src="imagenes/Juguetes/GyomeiBandai-2.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 3">
+                            <img src="imagenes/Juguetes/GyomeiBandai-3.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
                         </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Juguetes/GyomeiBandai-4.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Juguetes/GyomeiBandai-5.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>s
                     </div>
-                    <a class="carousel-control-prev" href="#carouselComputadoras" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#GyomeiBandai" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselComputadoras" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#GyomeiBandai" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
             </div>
             <div class="col-md-4">
-                <h3>Juguetes</h3>
-                <p>Descripción de las computadoras. Aquí puedes añadir más detalles sobre las características y especificaciones de las computadoras mostradas en el carrusel.</p>
+                <h3>Demon Slayer Gyomei</h3>
+                <p>Descripción</p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>Precio : $</p>
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-md-5">
+                <div id="MuzanBandai" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="imagenes/Juguetes/MuzanBandai-1.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Juguetes/MuzanBandai-2.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Juguetes/MuzanBandai-3.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#MuzanBandai" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#MuzanBandai" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h3>Demon Slayer Gyomei</h3>
+                <p>Descripción</p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>Precio : $</p>
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-md-5">
+                <div id="Tanjiro" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="imagenes/Juguetes/TanjiroBandai-1.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Juguetes/TanjiroBandai-2.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Juguetes/TanjiroBandai-3.jpg" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#Tanjiro" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#Tanjiro" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h3>Demon Slayer Tanjiro</h3>
+                <p>Descripción</p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>Precio : $</p>
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-md-8">
+                <div id="FunkosMortalKombat" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="imagenes/Juguetes/FunkosMortalKombat-1.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Juguetes/FunkosMortalKombat-2.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item active">
+                            <img src="imagenes/Juguetes/FunkosMortalKombat-3.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Juguetes/FunkosMortalKombat-4.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item active">
+                            <img src="imagenes/Juguetes/FunkosMortalKombat-5.jpg" class="d-block w-100" alt="">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#FunkosMortalKombat" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#FunkosMortalKombat" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h3>Funkos Mortal Kombat</h3>
+                <p>Descripción</p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>Precio : $</p>
             </div>
         </div>
     </div>
