--- a/computadoras.html
+++ b/computadoras.html
@@ -111,7 +111,72 @@
                 <p>- <a href="https://www.aorus.com/es-mx/motherboards/B450-AORUS-M-rev-1x/Key-Features" target="_blank"> Soporte tarjeta de video</a></p>
             </div>
         </div>
+
+    <br/>
+    <br/>
+    <br/>
+    <div class="row">
+        <div class="col-md-8">
+            <div id="computadora1" class="carousel slide" data-ride="carousel" data-interval="45000">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img src="imagenes/Computadoras/Gi-PC-1.mp4" class="d-block w-100"  style="max-width: 500px; height: auto;" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/Computadoras/Gi-PC-2.mp4" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                    </div>
+                    <div class="carousel-item active">
+                        <img src="imagenes/Computadoras/Gi-PC-3.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/Computadoras/Gi-PC-4.png" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/Computadoras/Gi-PC-5.png" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/Computadoras/Gi-PC-6.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/Computadoras/Gi-TarjetaMadre-1.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/Computadoras/Gi-Procesador-1.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/Computadoras/Gi-PC-6.png" class="d-block w-100" alt="">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#computadora1" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#computadora1" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h3>Computadora Gamer Corsair</h3>
+            <p>Descripción</p>
+            <p>- <a href="https://www.aorus.com/es-mx/motherboards/B450-AORUS-M-rev-1x/Key-Features" target="_blank"> Tarjeta Madre Aorus B450 M </a></p>
+            <p>- <a href="https://www.amazon.com.mx/Procesador-AMD-RYZEN-3-6Ghz-Socket/dp/B07B428V2L" target="_blank"> AMD Ryzen 5 2600X Six-Core Processor 3.60 GHz  </a></p>
+            <p>- <a href="https://www.amazon.com.mx/Corsair-Vengeance-CMW16GX4M2C3200C16W-3200MHz-m%C3%B3dulo/dp/B07D5SN1ZK" target="_blank"> CORSAIR VENGEANCE RGB PRO 16GB (2x8GB) DDR4 3200MHz  </a></p>
+            <p>- <a href="https://www.nvidia.com/en-gb/geforce/graphics-cards/geforce-gtx-1070/specifications/" target="_blank"> GE Force GTX 1070 </a></p>
+            <p>- <a href="https://www.cyberpuerta.mx/Computo-Hardware/Componentes/Enfriamiento-y-Ventilacion/Enfriamiento-Liquido/Corsair-Hydro-Series-H60-Enfriamiento-Liquido-para-CPU-1x-120mm-1700RPM.html" target="_blank"> Corsair Hydro Series H60 Enfriamiento Liquido para CPU, 1x 120mm, 1700RPM </a></p>
+            <p>- <a href="https://www.cyberpuerta.mx/index.php?cl=details&anid=75447de8ff5cd3da0a4ea1f219c7476b&utm_source=deliveredwaybill&utm_medium=email&utm_campaign=deliveredwaybill" target="_blank"> Disco duro Barracuda 2TB </a></p>
+            <p>- <a href="https://www.aorus.com/es-mx/motherboards/B450-AORUS-M-rev-1x/Key-Features" target="_blank"> Fuente Aorus B450 M</a></p>
+            <p>- <a href="https://a.co/d/07lyQDgO" target="_blank"> TP-Link Tarjeta WiFi 6 AX3000 PCIe WiFi</a></p>
+            <p>- <a href="https://a.co/d/0dstqR1H" target="_blank"> Kingston SSD A400 480GB </a></p>
+            <p>- Ventilador Cooler Master y Corsair</a></p>
+            <p>- Seasonic de 650 Watts </a></p>
+            <p>- <a href="https://www.cyberpuerta.mx/index.php?cl=details&anid=cf7fdae2177865630084ff30c0be909d&utm_source=deliveredwaybill&utm_medium=email&utm_campaign=deliveredwaybill" target="_blank"> Gabinete Corsair Carbide 275R con Ventana, Midi-Tower, ATX/Micro-ATX/Mini-ITX</a></p>
+            <p>- Soporte tarjeta de video </p>
+            <p>Precio : $9800 </p>
+        </div>
     </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
