--- a/computadoras.html
+++ b/computadoras.html
@@ -22,6 +22,17 @@
         .section {
             padding: 50px 0;
         }
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+        background-color: black; 
+        }
+        .carousel-control-prev,
+        .carousel-control-next {
+        color: black; 
+        }
+        .video-container {
+        max-width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -58,11 +69,15 @@
         <div class="col-md-8">
             <div id="computadora1" class="carousel slide" data-ride="carousel" data-interval="45000">
                 <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <img src="imagenes/Computadoras/Gi-PC-1.mp4" class="d-block w-100"  style="max-width: 500px; height: auto;" alt="">
+                    <div class="video-container">
+                        <video width="500" height="700" controls id="myVideo" >
+                            <source src="imagenes/Computadoras/Gi-PC-1.mp4" type="video/mp4">
+                          </video>
                     </div>
-                    <div class="carousel-item">
-                        <img src="imagenes/Computadoras/Gi-PC-2.mp4" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                    <div class="video-container">
+                        <video width="500" height="700" controls id="myVideo" >
+                            <source src="imagenes/Computadoras/Gi-PC-2.mp4" type="video/mp4">
+                          </video>
                     </div>
                     <div class="carousel-item active">
                         <img src="imagenes/Computadoras/Gi-PC-3.png" class="d-block w-100" alt="">
@@ -116,6 +131,23 @@
         </div>
     </div>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var video = document.getElementById('myVideo');
+
+      video.muted = true;
+
+      video.addEventListener('volumechange', function() {
+        video.muted = true;
+      });
+
+      video.addEventListener('loadedmetadata', function() {
+        video.volume = 0; 
+        video.removeAttribute('controls'); 
+      });
+    });
+  </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
